fixed communities buttons and list header+footer on ie8

--- a/bottlecap/layouts/popper/static/css/elements/buttons.less
+++ b/bottlecap/layouts/popper/static/css/elements/buttons.less
@@ -28,6 +28,7 @@
 
   // Give IE7 some love
   .ie7-restore-left-whitespace();
+  position: relative;
 }
 
 // Hover state
