--- a/bottlecap/layouts/popper/static/css/ie.less
+++ b/bottlecap/layouts/popper/static/css/ie.less
@@ -30,11 +30,29 @@ select,
   // Button Base
   behavior: url(PIE.htc);
   // Button Sizes
-  &.large {
+  &.btn-mini, &.btn-small, &.btn-large {
     behavior: url(PIE.htc);
   }
 }
-
+.btn-group .btn {
+  filter: none;
+  behavior: url(PIE.htc);
+}
+.btn-group .btn:first-child {
+  behavior: url(PIE.htc);
+}
+.btn-group .btn:last-child,
+.btn-group .dropdown-toggle {
+  behavior: url(PIE.htc);
+}
+// Reset corners for large buttons
+.btn-group .btn.large:first-child {
+  behavior: url(PIE.htc);
+}
+.btn-group .btn.large:last-child,
+.btn-group .large.dropdown-toggle {
+  behavior: url(PIE.htc);
+}
 /* MAIN */
 .quickpanelToggle(@textColor:#fff) {
     behavior: url(PIE.htc);
@@ -67,13 +85,23 @@ form#search-form fieldset {
 .dropwdown-menu {
   behavior: url(PIE.htc);
 }
-// .label-moderator, .label.private {
-//   behavior: url(PIE.htc);
-// }
-.sectionRelated, .contentRelated {
+.label-moderator, .label.private {
+  position: relative;
   behavior: url(PIE.htc);
 }
-.filterOptions {
+.sectionRelated, .contentRelated, .contentActions {
+  behavior: url(PIE.htc);
+}
+.filter {
+  position: relative;
+  background-color: #ab9779;
+  filter: none;
+  behavior: url(PIE.htc);
+}
+.paginationBar {
+  position: relative;
+  background-color: #ab9779;
+  filter: none;
   behavior: url(PIE.htc);
 }
 table {
@@ -99,14 +127,8 @@ form.addKeyword {
     behavior: url(PIE.htc);
   }
 }
-.filter {
-  behavior: url(PIE.htc);
-}
 .tabular-view a,
 .picture-view a {
-  behavior: url(PIE.htc);
-}
-.paginationBar {
   behavior: url(PIE.htc);
 }
 .next, .prev {
